--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="demo">
-        <p id="image"></p>
-    </div>
-    <div>
-        <p id="counting"></p>
+    <div id="gun_man">
+        <p class="player" id="sprite"></p>
     </div>
 </body>
-<script src="./script/player.js" defer></script>
+<script  type="module" src="./script/player.js"  defer></script>
 <link rel="stylesheet" href="./css/index.css">
 </html>
