first push to github

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="gun_man">
-        <p class="player" id="sprite"></p>
+    <div id="gun_man_one">
+        <p class="playerOne" id="runnerOne"></p>
+    </div>
+    <br/><br/><br/><br/><br/><br/>
+    <div id="gun_man_two">
+        <p class="playerTwo" id="runnerTwo"></p>
     </div>
 </body>
 <script  type="module" src="./script/player.js"  defer></script>
